projects/compiler/test/typechecker/match/error_nooverlap_literal.1.out
Error at %FILE_NAME%:2:3
Unreachable match case
  |    1.23 => {}
       ^
No overlap between case type 'Float' and match target type 'Int'
