projects/compiler/test/typechecker/match/error_nooverlap_literal.2.abra
val arr = ["a", "b"]
match arr[0] {
  None => {}
  1.23 => {}
}